--- a/style.css
+++ b/style.css
@@ -429,3 +429,12 @@ footer{
 footer p{
     text-align: center;
 }
+
+.project-subtitle {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #666;
+  text-align: center;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
